<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/languages"/>

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/languages"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/assembly"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/assembly"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/assembly" />

                    <ImageView
                        android:id="@+id/c"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/c"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/c" />

                    <ImageView
                        android:id="@+id/cpp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/cpp"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/cpp" />

                    <ImageView
                        android:id="@+id/csharp"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/csharp"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/csharp" />

                    <ImageView
                        android:id="@+id/golang"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/golang"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/golang" />

                    <ImageView
                        android:id="@+id/java"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/java"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/java" />

                    <ImageView
                        android:id="@+id/javascript"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/javascript"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/javascript" />

                    <ImageView
                        android:id="@+id/kotlin"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/kotlin"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/kotlin" />

                    <ImageView
                        android:id="@+id/php"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/php"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/php" />

                    <ImageView
                        android:id="@+id/python"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/python"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/python" />

                    <ImageView
                        android:id="@+id/ruby"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/ruby"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/ruby" />

                    <ImageView
                        android:id="@+id/rust"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:contentDescription="@string/rust"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/rust" />

                    <ImageView
                        android:id="@+id/swift"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="40dp"
                        android:contentDescription="@string/swift"
                        android:onClick="languageChoice"
                        app:srcCompat="@drawable/swift" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>