<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/learn"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_marginTop="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/learn"
                android:onClick="learn"
                app:srcCompat="@drawable/learn" />

            <ImageView
                android:id="@+id/qr"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_below="@id/learn"
                android:layout_marginTop="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/qr"
                android:onClick="qr"
                app:srcCompat="@drawable/qr" />

            <ImageView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_below="@id/qr"
                android:layout_marginTop="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/cv"
                android:onClick="cv"
                app:srcCompat="@drawable/cv" />

            <ImageView
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_below="@id/cv"
                android:layout_marginTop="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/github"
                android:onClick="github"
                app:srcCompat="@drawable/github" />

            <ImageView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_below="@id/github"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/info"
                android:onClick="info"
                app:srcCompat="@drawable/info" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>